Simplified license header and print more info on start