@@ -1,25 +1,6 @@
 /*
- * Copyright (c) 2021-2023 GeyserMC
- *
- * Permission is hereby granted, free of charge, to any person obtaining a copy
- * of this software and associated documentation files (the "Software"), to deal
- * in the Software without restriction, including without limitation the rights
- * to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
- * copies of the Software, and to permit persons to whom the Software is
- * furnished to do so, subject to the following conditions:
- *
- * The above copyright notice and this permission notice shall be included in all
- * copies or substantial portions of the Software.
- *
- * THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
- * IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
- * FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
- * AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
- * LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
- * OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
- * SOFTWARE.
- *
- * @author GeyserMC
+ * Copyright (c) 2021-2024 GeyserMC
+ * Licensed under the MIT license
  * @link https://github.com/GeyserMC/GlobalLinkServer
  */
 package org.geysermc.globallinkserver.config;
@@ -28,14 +9,13 @@ import static org.geysermc.globallinkserver.GlobalLinkServer.LOGGER;
 
 import com.google.gson.Gson;
 import java.io.IOException;
-import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.Paths;
 
 public class ConfigReader {
     private static final Gson GSON = new Gson();
-    private static final Path CONFIG_PATH = Paths.get("./config.json");
+    private static final Path CONFIG_PATH = Paths.get("config.json");
 
     public static Config readConfig() {
         LOGGER.info("Reading config from " + CONFIG_PATH.toAbsolutePath());
@@ -50,7 +30,7 @@ public class ConfigReader {
 
     private static String configContent() {
         try {
-            return new String(Files.readAllBytes(CONFIG_PATH), StandardCharsets.UTF_8);
+            return Files.readString(CONFIG_PATH);
         } catch (IOException exception) {
             return null;
         }
